--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  height: 200vh; //TODO: Remove, Simulate long page to scroll
+  /*height: 200vh; //TODO: Remove, Simulate long page to scroll*/
 }
 
 .App_intro {
@@ -10,31 +10,44 @@
 /************** Header *************/
 .App_header {
   background-color: #222;
-  height: 10vh;
-  padding: 1%;
+  height: 105px;
+  padding: 9.5px;
   color: white;
   display: flex;
   align-items: center;
   position: fixed;
   width: 100%;
   box-sizing: border-box;
+  z-index: 5;
 }
 
-.header_menu{
-  height: 100%;
-  margin-right: 1%;
+.header_menu_icon{
+  height: 50%;
 }
 
 .App_logo {
   height: 100%;
 }
 
+.App_search{
+  height: 100%;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 9.5px;
+}
+
 .App_search-bar {
   flex-grow: 1;
   text-align: left;
   background-color: white;
-  height: 90%;
+  height: 35%;
   border-radius: 1vh;
+}
+
+.App_search-bar.search-location{
+  margin-bottom: 9.5px; /* Matches the padding on App_serach_bar */
 }
 
 .App_search-bar_contents{
@@ -46,35 +59,24 @@
   background: none;
 }
 
-.dot-separator{
-  margin: 0 5%;
+.App_search-bar_contents i{
+  margin-right: 6px;
 }
 
-/*.search-option:not(:first-of-type):before{
-  content: " • ";
-  margin: 0 5%;
-  vertical-align: middle;
-  display: inline;
-}*/
+.App_search-bar_contents{
 
-/*.App_search-bar input[type="text"]{
-  width: 100%;
-  height: 4.5vh;
-  padding: 1%;*/
-
-  /*box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;*/
-/*}*/
+}
 
 /************** Search Form *************/
-.App_search-form{
+/*.App_search-form{
   position: fixed;
   width: 100%;
   box-sizing: border-box;
   padding: 0.5%;
   background-color: black;
   color: white;
+  z-index: 5;
+  height: 240px;
 }
 
 .App_search-form input, .App_search-form [class^='search-form_'][class$='_container']{
@@ -93,11 +95,11 @@
 
 [class^='search-form_']{
   margin: 1.5% 0;
-}
+}*/
 
     /************** Search Form Animation *************/
     .searchFormAnimation-enter{
-      top: -50%;
+      top: -100%;
     }
 
     .searchFormAnimation-enter.searchFormAnimation-enter-active {
@@ -110,15 +112,71 @@
     }
 
     .searchFormAnimation-leave.searchFormAnimation-leave-active {
-      top: -50%;
+      top: -100%;
       transition: top 0.25s ease-in;
     }
+
+/************** Search Pages *************/
+[class^='search-page_']{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  box-sizing: border-box;
+  background-color: black;
+  color: white;
+  z-index: 10;
+  padding: 9.5px;
+}
+
+[class$='-page_location'] input{
+  width: 100%;
+  border-radius: 0.75vh;
+}
+
+.input-label{
+  position: relative;
+}
+
+.input-label i{
+  position: absolute;
+  left: 5px;
+  color: black;
+  top: 25%;
+}
+
+.input-label input{
+  height: 38px;
+  width: 100%;
+}
+
+[class^='search-form_'][class$='_container'] input[class^='search-field_']{
+  width: 45%;
+}
+
+[class$='-page_location'] .fa-times{
+  display: block;
+  text-align: left;
+}
+
+[class^='search-form_'][class$='_container']{
+  border: none;
+  border-radius: 0.5vh;
+}
+
+/*[class^='.search-field_']{
+  height: 100%;
+}*/
+
+/*[class^='search-form_']{
+  margin: 1.5% 0;
+}*/
 
 /************** Result Options *************/
 .App_result-options{
   position: fixed;
   width: 100%;
   bottom: 5vh;
+  z-index: 5;
 }
 
 .result-options_container{
@@ -132,11 +190,28 @@
   padding: 3.5% 5%;
   margin: 1%;
   font-size: 1em;
+  font-weight: bold;
   text-transform: uppercase;
+  background-color: white;
+  box-shadow: 0.75px 0.75px 7px #888888;
 }
 
 [class^="options-button--"] .fa{
   padding-right: 0.5em;
+}
+
+/************** Result List *************/
+.App_result-list{
+  padding-top: 105px;
+}
+
+/************** Map Styles *************/
+.mapboxgl-map{
+  padding-top: 105px; /* Space for the header */
+}
+
+.mapboxgl-canvas{
+  left: 0;
 }
 
 /************** Media Styles *************/
